--- a/index.html
+++ b/index.html
@@ -6,74 +6,125 @@
     <title>Input Pelanggaran Santri</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
-        body { background-color: #f8f9fa; padding-top: 20px; }
-        .container { max-width: 500px; }
-        .card { border-radius: 15px; box-shadow: 0 4px 8px rgba(0,0,0,0.1); }
-        .btn-submit { width: 100%; border-radius: 10px; }
+        body { background-color: #f8f9fa; padding-bottom: 50px; }
+        .card { border-radius: 15px; box-shadow: 0 4px 10px rgba(0,0,0,0.1); }
+        .btn-custom { border-radius: 10px; padding: 12px; font-weight: bold; }
+        .data-item { background: white; border-radius: 10px; margin-bottom: 10px; padding: 15px; border-left: 5px solid #4CAF50; }
+        .madin-border { border-left-color: #2196F3 !important; }
+        #loading { display: none; }
     </style>
 </head>
 <body>
 
-<div class="container">
-    <div class="card p-4">
-        <h3 class="text-center mb-4">Form Pelanggaran</h3>
-        
-        <form id="formPelanggaran">
+<div class="container mt-4">
+    <h3 class="text-center mb-4 fw-bold text-success">Catat Pelanggaran</h3>
+
+    <div class="card p-4 mb-4">
+        <form id="pelanggaranForm">
             <div class="mb-3">
                 <label class="form-label">Nama Santri</label>
-                <input type="text" name="nama" class="form-control" placeholder="Masukkan nama" required>
+                <input type="text" name="nama" class="form-control" placeholder="Ketik nama lengkap..." required>
             </div>
+
+            <div class="mb-3">
+                <label class="form-label">Kategori</label>
+                <select name="kategori" class="form-select" required>
+                    <option value="umum">Pelanggaran Umum</option>
+                    <option value="madin">Pelanggaran Madin</option>
+                </select>
+            </div>
+
             <div class="mb-3">
                 <label class="form-label">Jenis Pelanggaran</label>
-                <textarea name="pelanggaran" class="form-control" rows="3" required></textarea>
+                <input type="text" name="pelanggaran" class="form-control" placeholder="Contoh: Terlambat, Merokok..." required>
             </div>
-            <button type="submit" class="btn btn-primary btn-submit" id="btnSimpan">Simpan Data</button>
+
+            <div class="mb-3">
+                <label class="form-label">Keterangan Tambahan</label>
+                <textarea name="keterangan" class="form-control" rows="2" placeholder="Detail kejadian..."></textarea>
+            </div>
+
+            <button type="submit" id="submitBtn" class="btn btn-success w-100 btn-custom">SIMPAN DATA</button>
         </form>
-
-        <hr>
-
-        <h5 class="mt-4">Data Terbaru:</h5>
-        <div id="displayData" class="list-group mt-2">
-            <p class="text-muted text-center">Memuat data...</p>
+        
+        <div id="loading" class="text-center mt-3">
+            <div class="spinner-border text-success" role="status"></div>
+            <p>Sedang mengirim data...</p>
         </div>
+    </div>
+
+    <hr>
+
+    <h5 class="fw-bold mb-3">10 Data Terakhir</h5>
+    <div id="dataContainer">
+        <p class="text-center text-muted">Memuat data...</p>
     </div>
 </div>
 
 <script>
-    const scriptURL = 'URL_WEB_APP_ANDA'; // Ganti dengan URL dari Deploy Apps Script
+    // GANTI URL INI DENGAN URL WEB APP ANDA
+    const scriptURL = 'https://script.google.com/macros/s/AKfycbyzWBYfSvghycrjW5qzS4Sw6bs9j1COVB_DhEzng9IKvSVHhqL9fIBl0U3kYkK4bOKK8Q/exec';
+    const form = document.getElementById('pelanggaranForm');
+    const loading = document.getElementById('loading');
+    const submitBtn = document.getElementById('submitBtn');
+    const dataContainer = document.getElementById('dataContainer');
 
     // Fungsi Mengirim Data
-    document.getElementById('formPelanggaran').addEventListener('submit', e => {
+    form.addEventListener('submit', e => {
         e.preventDefault();
-        const btn = document.getElementById('btnSimpan');
-        btn.disabled = true;
-        btn.innerText = "Sedang Mengirim...";
+        submitBtn.disabled = true;
+        loading.style.display = 'block';
 
-        fetch(scriptURL, { method: 'POST', body: new FormData(e.target)})
-          .then(response => {
-              alert('Berhasil disimpan!');
-              btn.disabled = false;
-              btn.innerText = "Simpan Data";
-              e.target.reset();
-              loadData(); // Refresh list setelah isi data
-          })
-          .catch(error => console.error('Error!', error.message));
+        fetch(scriptURL, { 
+            method: 'POST', 
+            body: new FormData(form)
+        })
+        .then(response => {
+            alert('Data Berhasil Disimpan!');
+            form.reset();
+            loadData(); // Segarkan daftar data
+        })
+        .catch(error => {
+            console.error('Error!', error.message);
+            alert('Gagal mengirim data. Coba lagi.');
+        })
+        .finally(() => {
+            submitBtn.disabled = false;
+            loading.style.display = 'none';
+        });
     });
 
-    // Fungsi Mengambil/Menampilkan Data
+    // Fungsi Mengambil Data
     function loadData() {
-        fetch(scriptURL + "?action=read")
-          .then(res => res.json())
-          .then(data => {
-              let html = "";
-              data.forEach(row => {
-                  html += `<div class="list-group-item">
-                            <strong>${row.nama}</strong><br>
-                            <small>${row.pelanggaran}</small>
-                           </div>`;
-              });
-              document.getElementById('displayData').innerHTML = html;
-          });
+        fetch(scriptURL + '?action=read')
+        .then(res => res.json())
+        .then(data => {
+            dataContainer.innerHTML = '';
+            if (data.length === 0) {
+                dataContainer.innerHTML = '<p class="text-center">Belum ada data.</p>';
+                return;
+            }
+
+            data.forEach(item => {
+                const isMadin = item.kategori === 'madin';
+                const div = document.createElement('div');
+                div.className = `data-item ${isMadin ? 'madin-border' : ''}`;
+                div.innerHTML = `
+                    <div class="d-flex justify-content-between">
+                        <strong class="text-dark">${item.nama}</strong>
+                        <span class="badge ${isMadin ? 'bg-primary' : 'bg-success'}">${item.kategori.toUpperCase()}</span>
+                    </div>
+                    <div class="small text-muted mt-1">
+                        <b>Pelanggaran:</b> ${item.pelanggaran}<br>
+                        <b>Keterangan:</b> ${item.keterangan || '-'}
+                    </div>
+                `;
+                dataContainer.appendChild(div);
+            });
+        })
+        .catch(err => {
+            dataContainer.innerHTML = '<p class="text-center text-danger">Gagal memuat data.</p>';
+        });
     }
 
     // Jalankan loadData saat halaman dibuka
